--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     Whatsaap: 321 784 18 15
     </p>
 <a href="fase2/desing.html">fase 2</a>
+<a href="fase3/index.html">fase 3</a>
 </body>
 </html>
